--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -10,6 +10,35 @@
 {% endblock %}
 
 {% block content %}
+    <h2>Associations du moment</h2>
+    <div id="highlightsAsso" class="carousel slide mb-4" data-ride="carousel">
+        <div class="carousel-inner">
+            {% for asso in highlights.assos %}
+                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                    {#                    <img class="d-block w-100" src="..." alt="{{ asso.name }}">#}
+                    <div class="row">
+                        <div class="col-3 col-md-2 text-center">
+                            <img src="{{ asso.logo_url }}" alt="Logo asso" class="img-thumbnail">
+                        </div>
+                        <div class="col-9 col-md-10">
+                            <h4>
+                                {{ asso.name }}
+                            </h4>
+                            <p>
+                                {{ asso.description }}
+                            </p>
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#assoDetails{{ asso.id }}">
+                                Plus d'infos
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <h2>Toutes les associations</h2>
     <div class="card-columns">
         {% for asso in associations %}
             <div class="card">
