--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -11,14 +11,14 @@
 
 {% block content %}
     <h2>Associations du moment</h2>
-    <div id="highlightsAsso" class="carousel slide mb-4" data-ride="carousel">
+    <div id="highlightsAsso" class="carousel slide mb-4"
+         data-ride="carousel" data-interval="3000">
         <div class="carousel-inner">
             {% for asso in highlights.assos %}
                 <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                    {#                    <img class="d-block w-100" src="..." alt="{{ asso.name }}">#}
                     <div class="row">
                         <div class="col-3 col-md-2 text-center">
-                            <img src="{{ asso.logo_url }}" alt="Logo asso" class="img-thumbnail">
+                            <img src="{{ asso.logo_url }}" alt="Logo asso" class="img-fluid">
                         </div>
                         <div class="col-9 col-md-10">
                             <h4>
@@ -29,6 +29,33 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-toggle="modal"
                                     data-target="#assoDetails{{ asso.id }}">
+                                Plus d'infos
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <h2>Évènements à venir</h2>
+    <div id="highlightsAsso" class="carousel slide mb-4" data-ride="carousel">
+        <div class="carousel-inner">
+            {% for event in highlights.events %}
+                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                    <div class="row">
+                        <div class="col-3 col-md-2 text-center">
+                            <img src="{{ event.logo_url }}" alt="Logo event" class="img-fluid">
+                        </div>
+                        <div class="col-9 col-md-10">
+                            <h4>
+                                {{ event.name }}
+                            </h4>
+                            <p>
+                                {{ event.short_description }}
+                            </p>
+                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                    data-target="#assoDetails{{ event.association.id }}">
                                 Plus d'infos
                             </button>
                         </div>
