Display logo for event

--- a/templates/event/detail.html
+++ b/templates/event/detail.html
@@ -110,6 +110,15 @@
         </div>
     </div>
 
+    <div class="row mb-3">
+        <div class="col-12">
+            <b>Logo</b>
+            <div class="card bg-light">
+                <div class="card-body">{{ object.logo_url }}</div>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-12">
             <b>Tarifs</b>
