Display public/private status on files list

--- a/templates/file/files/tree.html
+++ b/templates/file/files/tree.html
@@ -45,7 +45,9 @@
         {% endfor %}
         {% for file in files %}
             <tr>
-                <td><i class="fa fa-file"></i> <a href="{% url 'file-view' file.id %}">{{ file.name }}</a></td>
+                <td><i class="fa fa-file"></i> <a href="{% url 'file-view' file.id %}">
+                    {{ file.name }} ({% if file.is_public %}public{% else %}privé{% endif %})
+                </a></td>
                 {% if folder.id %}
                     <td class="text-right"><a href="{% url 'association-file-delete' association.id file.id %}"
                                               data-toggle="tooltip" title="Supprimer le fichier"><i
