--- a/templates/file/files/list.html
+++ b/templates/file/files/list.html
@@ -10,7 +10,7 @@
             <thead>
             <tr>
                 <th>Nom</th>
-                <th>Type</th>
+                <th>Public ?</th>
                 <th data-orderable="false">Action</th>
             </tr>
             </thead>
@@ -18,7 +18,7 @@
             {% for file in object_list %}
                 <tr>
                     <td><a href="{% url 'file-view' file.id %}">{{ file.name }}</a></td>
-                    <td>-</td>
+                    <td>{% if file.is_public %}Oui{% else %}Non{% endif %}</td>
                     <td>-</td>
                 </tr>
             {% endfor %}
