Allow export of BNP data

--- a/templates/export/export.html
+++ b/templates/export/export.html
@@ -35,7 +35,10 @@
                     <input type="checkbox" name="data" value="PRESIDENT" autocomplete="off"> Contact président
                 </label>
                 <label class="btn btn-primary">
-                    <input type="checkbox" name="data" value="BANK" autocomplete="off"> Coordonnées bancaires
+                    <input type="checkbox" name="data" value="BANK" autocomplete="off"> IBAN + BIC
+                </label>
+                <label class="btn btn-primary">
+                    <input type="checkbox" name="data" value="BNP" autocomplete="off"> BNP (Ignore les autres colonnes)
                 </label>
             </div>
                 <button type="submit" class="btn btn-success btn-block btn-lg col-md-4 mt-4 ml-auto mr-auto">Télécharger</button>
