--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -76,6 +76,15 @@
 
 
             <h2>Toutes les associations</h2>
+            <div class="mb-4">
+                <div class="input-group">
+                    <input type="text" id="botinsa-search" class="searchbox-input form-control"
+                           placeholder="Recherche...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-secondary" type="button"><i class="fa fa-search pr-0"></i></button>
+                    </span>
+                </div>
+            </div>
             <div class="card-columns">
                 {% for asso in associations %}
                     <div class="card">
