Add a min height to highlights to avoid rescaling

--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <div class="row mb-4">
-        <div class="col-md-6 col-12">
+        <div class="col-md-6 col-12" id="highlights">
             <h2>Associations du moment</h2>
             <div id="highlightsAsso" class="carousel slide mb-4" data-ride="carousel" data-interval="5500">
                 <div class="carousel-inner">
