--- a/templates/association/detail.html
+++ b/templates/association/detail.html
@@ -46,7 +46,7 @@
     </div>
     <div class="row mb-3">
         <div class="col-md-12">
-            <b>Description courte</b>
+            <b>Description <small class="text-muted">(non visible dans le Bot'INSA)</small></b>
             <div class="card bg-light">
                 <div class="card-body">{{ object.description }}</div>
             </div>
