--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div class="row mb-4">
         <div class="col-md-6 col-12" id="highlights">
-            <h2>Associations du moment</h2>
+            <h2>Associations à la une</h2>
             <div id="highlightsAsso" class="carousel slide mb-4" data-ride="carousel" data-interval="5500">
                 <div class="carousel-inner">
                     {% for asso in highlights.assos %}
