--- a/templates/directory/public.html
+++ b/templates/directory/public.html
@@ -77,13 +77,17 @@
 
             <h2>Toutes les associations</h2>
             <div class="mb-4">
-                <div class="input-group">
-                    <input type="text" id="botinsa-search" class="searchbox-input form-control"
-                           placeholder="Recherche...">
-                    <span class="input-group-btn">
-                        <button class="btn btn-secondary" type="button"><i class="fa fa-search pr-0"></i></button>
-                    </span>
-                </div>
+                <form action="" method="get">
+                    <div class="input-group">
+                        <input type="text"
+                               name="query"
+                               class="form-control"
+                               placeholder="Recherche...">
+                        <span class="input-group-btn">
+                            <button class="btn btn-secondary" type="submit"><i class="fa fa-search pr-0"></i></button>
+                        </span>
+                    </div>
+                </form>
             </div>
             <div class="card-columns">
                 {% for asso in associations %}
